--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,12 +80,18 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 dimension.mail.from=info@niafikra.com
 dimension.mail.errors=baxizzo@gmail.com
 dimension.mail.active=true
-
-
 #
 # inventory mySQL JDBC configuration
 #
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory_ddl?useSSL=false&serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/inventory_app?useSSL=false&serverTimeZone=UTC
 spring.datasource.username=hbstudent
 spring.datasource.password=hbstudent
 spring.jpa.generate-ddl=true
+
+#money
+dimension.money.exchange-service-api-url=http://openexchangerates.org/api 
+dimension.money.exchange-service-app-id=0c098d73a67d43ce8e21eeb278163627 
+dimension.money.exchange-service-date-format=yyyy-MM-dd 
+dimension.money.local-currency-codes=TZS,USD,EUR,KES,UGX 
+dimension.money.local-currency-names=TZS,USD,EUR,KES,UGX 
+dimension.money.exchange-mode=local-online dimension.money.default-currency=TZS 
